# DirectXTK12

./: .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  DirectXTK_Desktop_2015_Win10.sln  DirectXTK_Desktop_2015_Win10.vcxproj  DirectXTK_Desktop_2015_Win10.vcxproj.filters  DirectXTK_Desktop_2017_Win10.sln  DirectXTK_Desktop_2017_Win10.vcxproj  DirectXTK_Desktop_2017_Win10.vcxproj.filters  DirectXTK_Desktop_2019_Win10.sln  DirectXTK_Desktop_2019_Win10.vcxproj  DirectXTK_Desktop_2019_Win10.vcxproj.filters  DirectXTK_Desktop_2022_Win10.sln  DirectXTK_Desktop_2022_Win10.vcxproj  DirectXTK_Desktop_2022_Win10.vcxproj.filters  DirectXTK_Desktop_2026.slnx  DirectXTK_Desktop_2026.vcxproj  DirectXTK_Desktop_2026.vcxproj.filters  DirectXTK_GDKW_2022.sln  DirectXTK_GDKW_2022.vcxproj  DirectXTK_GDKW_2022.vcxproj.filters  DirectXTK_GDKX_2022.sln  DirectXTK_GDKX_2022.vcxproj  DirectXTK_GDKX_2026.slnx  DirectXTK_GDKX_2026.vcxproj  DirectXTK_GDKX_2026.vcxproj.filters  DirectXTK_GDK_2017.sln  DirectXTK_GDK_2017.vcxproj  DirectXTK_GDK_2017.vcxproj.filters  DirectXTK_GDK_2019.sln  DirectXTK_GDK_2019.vcxproj  DirectXTK_GDK_2019.vcxproj.filters  DirectXTK_GDK_2022.sln  DirectXTK_GDK_2022.vcxproj  DirectXTK_GDK_2022.vcxproj.filters  DirectXTK_Windows10.sln  DirectXTK_Windows10.vcxproj  DirectXTK_Windows10.vcxproj.filters  (+22 more)
.azuredevops/pipelines/: DirectXTK12-GitHub-CMake-Dev17.yml  DirectXTK12-GitHub-CMake.yml  DirectXTK12-GitHub-Dev17.yml  DirectXTK12-GitHub-GDK-Dev17.yml  DirectXTK12-GitHub-GDK.yml  DirectXTK12-GitHub-MinGW.yml  DirectXTK12-GitHub-SDK-prerelease.yml  DirectXTK12-GitHub-SDK-release.yml  DirectXTK12-GitHub-Test-Dev17.yml  DirectXTK12-GitHub-Test.yml  DirectXTK12-GitHub.yml  DirectXTK12-OneFuzz-Coverage.yml  DirectXTK12-OneFuzz-Meshes.yml  DirectXTK12-OneFuzz.yml  DirectXTK12-SDL.yml
.azuredevops/policies/: approvercountpolicy.yml  branchClassification.yml  inventory-enablement.yml
.azuredevops/templates/: DirectXTK12-build-gdk.yml  DirectXTK12-build-gdkx.yml  DirectXTK12-build-uwp-arm64.yml  DirectXTK12-build-uwp.yml  DirectXTK12-build-win32.yml  DirectXTK12-setup-auto.yml  DirectXTK12-setup-gdk-auto.yml
.bwoi/: Directory.Build.props
.github/: copilot-instructions.md
.github/linters/: .editorconfig-checker.json
.github/skills/directxtk12-usage/: SKILL.md
.github/skills/release/: SKILL.md
.github/workflows/: arm64.yml  arm64bvt.yml  bvt.yml  clangcl.yml  codeql.yml  lint.yml  main.yml  mingw.yml  msbuild.yml  msvc.yml  test.yml  testuwp.yml  uwp.yml  vcpkg.yml
.nuget/: DirectXTK12-config.cmake.in  directxtk12_desktop_2015.nuspec  directxtk12_desktop_2015.targets  directxtk12_desktop_2017.nuspec  directxtk12_desktop_2017.targets  directxtk12_desktop_2019.nuspec  directxtk12_desktop_2019.targets  directxtk12_desktop_win10.nuspec  directxtk12_desktop_win10.targets  directxtk12_uwp.nuspec  directxtk12_uwp.targets  signconfig_desktop.xml  signconfig_desktop_2015.xml  signconfig_uwp.xml
Audio/: AudioEngine.cpp  DynamicSoundEffectInstance.cpp  SoundEffect.cpp  SoundEffectInstance.cpp  WaveBank.cpp  WaveBankReader.cpp  WaveBankReader.h
Inc/: Audio.h  BufferHelpers.h  CommonStates.h  DDSTextureLoader.h  DescriptorHeap.h  DirectXHelpers.h  EffectPipelineStateDescription.h  Effects.h  GamePad.h  GeometricPrimitive.h  GraphicsMemory.h  Model.h  Mouse.h  PostProcess.h  PrimitiveBatch.h  RenderTargetState.h  ResourceUploadBatch.h  ScreenGrab.h  SimpleMath.h  SimpleMath.inl  SpriteBatch.h  SpriteFont.h  VertexTypes.h  WICTextureLoader.h  XboxDDSTextureLoader.h
Src/: AlphaTestEffect.cpp  BasicEffect.cpp  BasicPostProcess.cpp  BinaryReader.cpp  BufferHelpers.cpp  CommonStates.cpp  DDSTextureLoader.cpp  DebugEffect.cpp  DescriptorHeap.cpp  DirectXHelpers.cpp  DualPostProcess.cpp  DualTextureEffect.cpp  EffectCommon.cpp  EffectCommon.h  EffectFactory.cpp  EffectPipelineStateDescription.cpp  EffectTextureFactory.cpp  EnvironmentMapEffect.cpp  GamePad.cpp  GenericMultiBuffer.h  GeometricPrimitive.cpp  GraphicsMemory.cpp  Keyboard.cpp  LinearAllocator.cpp  LinearAllocator.h  LoaderHelpers.h  Model.cpp  ModelLoadCMO.cpp  ModelLoadGLTF.cpp  ModelLoadSDKMESH.cpp  ModelLoadVBO.cpp  Mouse.cpp  NPREffect.cpp  NPREffectFactory.cpp  NormalMapEffect.cpp  PBREffect.cpp  PBREffectFactory.cpp  PlatformHelpers.h  PrimitiveBatch.cpp  ResourceUploadBatch.cpp  (+11 more)
Src/Shaders/: AlphaTestEffect.fx  BasicEffect.fx  CompileShaders.cmd  DebugEffect.fx  DualTextureEffect.fx  EnvironmentMapEffect.fx  GenerateMips.hlsl  NPREffect.fx  NormalMapEffect.fx  PBREffect.fx  PostProcess.fx  RootSig.fxh  SkinnedEffect.fx  SpriteEffect.fx  Structures.fxh  ToneMap.fx
Src/Shaders/Compiled/: AlphaTestEffect_PSAlphaTestEqNe.inc  AlphaTestEffect_PSAlphaTestEqNeNoFog.inc  AlphaTestEffect_PSAlphaTestLtGt.inc  AlphaTestEffect_PSAlphaTestLtGtNoFog.inc  AlphaTestEffect_VSAlphaTest.inc  AlphaTestEffect_VSAlphaTestNoFog.inc  AlphaTestEffect_VSAlphaTestVc.inc  AlphaTestEffect_VSAlphaTestVcNoFog.inc  BasicEffect_PSBasic.inc  BasicEffect_PSBasicNoFog.inc  BasicEffect_PSBasicPixelLighting.inc  BasicEffect_PSBasicPixelLightingTx.inc  BasicEffect_PSBasicTx.inc  BasicEffect_PSBasicTxNoFog.inc  BasicEffect_PSBasicVertexLighting.inc  BasicEffect_PSBasicVertexLightingNoFog.inc  BasicEffect_PSBasicVertexLightingTx.inc  BasicEffect_PSBasicVertexLightingTxNoFog.inc  BasicEffect_VSBasic.inc  BasicEffect_VSBasicNoFog.inc  BasicEffect_VSBasicOneLight.inc  BasicEffect_VSBasicOneLightTx.inc  BasicEffect_VSBasicOneLightTxVc.inc  BasicEffect_VSBasicOneLightVc.inc  BasicEffect_VSBasicPixelLighting.inc  BasicEffect_VSBasicPixelLightingBn.inc  BasicEffect_VSBasicPixelLightingTx.inc  BasicEffect_VSBasicPixelLightingTxBn.inc  BasicEffect_VSBasicPixelLightingTxVc.inc  BasicEffect_VSBasicPixelLightingTxVcBn.inc  BasicEffect_VSBasicPixelLightingVc.inc  BasicEffect_VSBasicPixelLightingVcBn.inc  BasicEffect_VSBasicTx.inc  BasicEffect_VSBasicTxNoFog.inc  (+119 more)
nuget/: directxtk12_desktop_2015.nuspec  directxtk12_uwp.nuspec  directxtk12_uwp.targets
skills/directxtk12-tutorial/: SKILL.md
skills/directxtk12-usage/: SKILL.md
(+12 files in other folders)
